--- a/Volledige_code.ipynb
+++ b/Volledige_code.ipynb
@@ -5,7 +5,7 @@
    "id": "5c659e3f",
    "metadata": {},
    "source": [
-    "# Full code without Astro Pi Replay"
+    "# Volledige code zonder Astro Pi Replay"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "id": "5479fa3c",
    "metadata": {},
    "source": [
-    "# Full code with Astro Pi Replay tool"
+    "# Volledige code met Astro Pi Replay"
    ]
   },
   {
